[gd_scene load_steps=4 format=2]

[ext_resource path="res://Assets/Maps/map.gd" type="Script" id=1]
[ext_resource path="res://Assets/Maps/Map01.tscn" type="PackedScene" id=2]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 320, 180 )

[node name="Map" type="Node2D"]
script = ExtResource( 1 )
map_width_screens = 10
start_room = 3

[node name="ScrollingRegions" type="Area2D" parent="."]
collision_layer = 0

[node name="CollisionShape2D_1" type="CollisionShape2D" parent="ScrollingRegions"]
shape = SubResource( 1 )

[node name="Map01" parent="." instance=ExtResource( 2 )]

[connection signal="body_exited" from="ScrollingRegions" to="." method="_on_ScrollingRegions_body_exited"]
[connection signal="body_shape_entered" from="ScrollingRegions" to="." method="_on_ScrollingRegions_body_shape_entered"]
